--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
-<!-- saved from url=(0039)file:///C:/Users/bhara/sejal/index.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>text tags</title>
+
+<!-- saved from url=(0057)file:///C:/Users/bhara/sejal/sejal/index_files/index.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>text tags</title>
 </head>
    <body>
     <h1>MAHATMA GANDHI </h1>
     <p>
-    <img src="./index_files/mahatma gandhi.jpg"></p><div class="introduction"></div>
-    <p>
+    <img src="./text tags_files/Mahatma Gandhi.jpg">
+    </p><p>
     <b>introduction</b><br>
     </p>
     Mahatma Gandhi<i>was born Mohandas Karamchand Gandhi, was a remarkable Indian political and civil rights leader who played a pivotal role in India's struggle for independence . He's often referred to as the "Father of the Nation" and is revered for his philosophy of nonviolent resistance, which inspired movements for civil rights and freedom across the world.</i><br>
@@ -30,5 +29,5 @@
    <i>After his family moved to Rajkot, a nine year old Gandhi was enrolled at a local school, where he studied the basics of arithmetic, history, geography and languages. When he was 11 years old, he attended a high school in Rajkot. He lost an academic year in between because of his wedding but later rejoined the school and eventually completed his schooling. He then dropped out of Samaldas College in Bhavnagar State after joining it in the year 1888. Later Gandhi was advised by a family friend Mavji Dave Joshiji to pursue law in London.</i>
    
 
-</body>
-    </html>
+
+    </body></html>
